04-11/ns-psa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-psa
  labels:
    # Baselineポリシーに違反するPodのデプロイを禁止
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.30
    # Restrictedポリシーに違反するPodのデプロイを検知した場合はAudit Logに記録
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.30
    # Restrictedポリシーに違反するPodのデプロイを検知した場合は警告を表示
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.30
