04-11/baseline-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: baseline-pod
  namespace: ns-psa
spec:
  containers:
  - name: ubuntu
    image: ubuntu:22.04
    command: ["/bin/sh", "-c", "while :; do sleep 10; done"]
