04-11/privileged-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-pod
  namespace: ns-vap
spec:
  containers:
  - name: ubuntu
    image: ubuntu:22.04
    command: ["/bin/sh", "-c", "while :; do sleep 10; done"]
    securityContext:
      privileged: true
